--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "santigarcor/laratrust": "^8.4",
         "tymon/jwt-auth": "^2.2"
     },
     "require-dev": {
