--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,8 @@
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
         "ichtrojan/laravel-otp": "^2.0",
+        "intervention/image": "^3.11",
+        "intervention/image-laravel": "^1.5",
         "kreait/firebase-php": "^7.10",
         "kreait/laravel-firebase": "^5.8",
         "laravel/framework": "^10.10",
@@ -18,6 +20,7 @@
         "tymon/jwt-auth": "^2.2"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.15",
         "fakerphp/faker": "^1.9.1",
         "laravel/pint": "^1.0",
         "laravel/sail": "^1.18",
