--- a/composer.json
+++ b/composer.json
@@ -30,12 +30,19 @@
         "spatie/laravel-ignition": "^2.0"
     },
     "autoload": {
+
+        "files": [
+            "app/Helpers/GlobalHelper.php"
+          ],
+
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
-        
+
+
+
     },
     "autoload-dev": {
         "psr-4": {
