--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "laravelcollective/html": "^6.4",
+        "pusher/pusher-php-server": "^7.2",
         "santigarcor/laratrust": "^8.4",
         "tymon/jwt-auth": "^2.2"
     },
