--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "ichtrojan/laravel-otp": "^2.0",
         "intervention/image": "^3.11",
         "intervention/image-laravel": "^1.5",
+        "jenssegers/agent": "^2.6",
         "kreait/firebase-php": "^7.10",
         "kreait/laravel-firebase": "^5.8",
         "laravel/framework": "^10.10",
