--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "kreait/laravel-firebase": "^5.8",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
+        "laravel/telescope": "^5.11",
         "laravel/tinker": "^2.8",
         "laravelcollective/html": "^6.4",
         "pusher/pusher-php-server": "^7.2",
